added curriculum queries, added post for topics
